<resources>
    <string name="app_name">Доходы и Расходы</string>
    <string name="splash_screen_text">From Eduard Protas</string>
    <string name="income">Доходы</string>
    <string name="main">Главная</string>
    <string name="expenses">Расходы</string>
    <string name="сurrencies">Валюты</string>
    <string name="allIncome">Сумма</string>
    <string name="all">Все</string>
    <string name="days">Дни</string>
    <string name="category">Категория</string>
    <string name="byCategory">По категориям</string>
    <string name="bill">Счет</string>
    <string name="byBill">По счетам</string>
    <string name="date">Дата</string>
    <string name="byDate">По датe</string>
    <string name="intfo">Итого</string>
    <string name="cash">Наличные</string>
    <string name="karta">Карта</string>
    <string name="job">Работа</string>
    <string name="present">Подарки</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="utilities">Kоммунальные</string>
    <string name="phone">Телефон</string>
    <string name="internet">Интернет</string>
    <string name="transport">Транспорт</string>
    <string name="supermarket">Супермаркет</string>
    <string name="medicine">Медицина</string>
    <string name="clothing">Одежда</string>
    <string name="cafe">Кафе</string>
    <string name="other">Прочие</string>

    <string-array name="categoryExpenses">
    <item></item>
    <item>Kоммунальные</item>
    <item>Телефон</item>
    <item>Интернет</item>
    <item>Транспорт</item>
    <item>Супермаркет</item>
    <item>Медицина</item>
    <item>Одежда</item>
    <item>Кафе</item>
    <item>Прочие</item>
</string-array>


    <string-array name="bill">
        <item></item>
        <item>Наличные</item>
        <item>Карта</item>
    </string-array>

    <string-array name="categoryIncome">
        <item></item>
        <item>Работа</item>
        <item>Подарки</item>
    </string-array>

</resources>
