<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/searcg"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="searcg"
        app:showAsAction="ifRoom|withText" >
    <menu>

        <item
            android:id="@+id/all"
            android:orderInCategory="100"
            android:title="@string/all"
            app:showAsAction="never" />


        <item
            android:id="@+id/byCategory"
            android:orderInCategory="100"
            android:title="@string/byCategory"
            app:showAsAction="never" />

        <item
            android:id="@+id/byBill"
            android:orderInCategory="100"
            android:title="@string/byBill"
            app:showAsAction="never" />

        <item
            android:id="@+id/byDate"
            android:orderInCategory="100"
            android:title="@string/byDate"
            app:showAsAction="never" />
    </menu>
    </item>
</menu>