<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/incomeBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_black_24dp" />

        <ImageView
            android:id="@+id/incomeSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/magr10dp"
            android:src="@drawable/ic_save_black_24dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_main_fragment"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

        <Spinner
            android:id="@+id/spinerCategoryCompleteTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/def_magrin_text"
            >
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_main_fragment"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

        <Spinner
            android:id="@+id/billCompleteTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
           android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/def_magrin_text"/>


    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/allIncome"
        android:textSize="@dimen/splash_screen_text_size"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/def_magrin_main_fragment"
        android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

    <EditText
        android:id="@+id/amountCompleteTextView"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:inputType="number"
        android:layout_marginLeft="@dimen/def_magrin_text"
        android:layout_marginRight="@dimen/magr10dp"/>

        <TextView
            android:id="@+id/currencyCompleteTextView"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:text="BY"
            android:textSize="@dimen/def_magrin_text"
            android:layout_marginTop="14dp"
            android:layout_marginRight="@dimen/def_magrin_text"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_main_fragment"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

        <EditText
            android:id="@+id/dateCompleteTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/def_magrin_text"/>

    </LinearLayout>
</LinearLayout>