<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/fragment_bill_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/intfo"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="34000 BY"
            android:textColor="@android:color/black"
            android:textSize="@dimen/splash_screen_text_size"
            android:layout_marginTop="@dimen/def_magrin_text"
            />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/magr10dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_bill_linear"
        />

    <LinearLayout
        android:id="@+id/fragment_bill_linear_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="34000 BY"
            android:textColor="@android:color/black"
            android:textSize="@dimen/splash_screen_text_size"
            android:layout_marginTop="@dimen/def_magrin_text"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_bill_linear_karta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fragment_bill_linear_cash">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/karta"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="34000 BY"
            android:textColor="@android:color/black"
            android:textSize="@dimen/splash_screen_text_size"
            android:layout_marginTop="@dimen/def_magrin_text"
            />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/def_magrin_text"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:fabSize="auto"
        />

</androidx.constraintlayout.widget.ConstraintLayout>