<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/allIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_black_24dp"
        android:tint="@color/colorAccent"
        android:layout_marginTop="@dimen/def_magrin_main_fragment"
        android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/allIncome"
        android:textSize="@dimen/splash_screen_text_size"
        android:textColor="@android:color/tab_indicator_text"
        android:layout_marginTop="@dimen/def_magrin_text"
        android:layout_marginLeft="@dimen/def_magrin_main_fragment"
        />
        <TextView
            android:id="@+id/amountTextViewMain"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/magr10dp"
            android:gravity="right"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/amountCurrMain"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="BY"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/magr10dp"
            android:visibility="invisible"
            />
</LinearLayout>

    <LinearLayout
        android:id="@+id/income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/allIncome">

        <ImageView
            android:id="@+id/dolIcon"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_money_black_24dp"
            android:tint="@color/colorAccent"
            android:layout_marginTop="@dimen/def_magrin_main_fragment"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/tab_indicator_text"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment"

            />

        <TextView
            android:id="@+id/incomeTextViewMain"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/holo_green_light"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/magr10dp"
            android:gravity="right"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/currMain"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="BY"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/holo_green_light"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/magr10dp"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/income">

        <ImageView
            android:id="@+id/purchasesIcon"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_shopping_cart_black_24dp"
            android:tint="@color/colorAccent"
            android:layout_marginTop="@dimen/def_magrin_main_fragment"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/tab_indicator_text"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginLeft="@dimen/def_magrin_main_fragment"
            />

        <TextView
            android:id="@+id/expensesTextViewMain"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/magr10dp"
            android:gravity="right"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/currMainEx"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="BY"
            android:textSize="@dimen/splash_screen_text_size"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="@dimen/def_magrin_text"
            android:layout_marginRight="@dimen/magr10dp"
            android:visibility="invisible"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>